feat: Add complete verification flow with 5-step badge application process
- Implement step-by-step badge type selection screen
- Add badge options: Senior Citizen, PWD, Solo Parents, Indigent, Student
- Create step indicator component for progress tracking
- Set up navigation structure for multi-step form
- Add UI for badge selection with icons and descriptions

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>We need access to your camera to capture your ID document</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need access to your photo library to upload your ID document</string>
 </dict>
 </plist>
