--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.7
   shared_preferences: ^2.5.4
+  intl: ^0.20.2
+  image_picker: ^1.2.1
+  image_cropper: ^11.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
