--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+     - .env 
      - assets/images/
      - assets/icons/
      - assets/badges/
