--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   json_annotation: ^4.9.0
   freezed_annotation: ^3.1.0
   logger: ^2.6.2
+  http_parser: ^4.0.2
+  mime: ^1.0.4
+  
 
   # Riverpod
   flutter_riverpod: ^3.2.0
