--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   geolocator: ^14.0.2
   location: ^5.0.3
   geocoding: ^4.0.0
+  flutter_image_compress: ^2.1.0
 
   # Retrofit and API calls:
   dio: ^5.9.0
