fix: add proper models for services/complaints tracking and fix null safety
- Add ServicesTrackingResponseModel and ComplaintsResponseModel
- Fix nullable string handling in TrackCaseCard and error states
- Update repositories and notifiers to use correct typed models
- Fix type casting errors preventing services/complaints from loading

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   location: ^5.0.3
   geocoding: ^4.0.0
   flutter_image_compress: ^2.1.0
+  socket_io_client: ^3.1.4
 
   # Retrofit and API calls:
   dio: ^5.9.0
