--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,8 @@ dependencies:
   
 
   # Riverpod
-  flutter_riverpod: ^3.2.0
+  riverpod: ^3.2.1
+  flutter_riverpod: ^3.2.1
   flutter_secure_storage: ^10.0.0
 
   # The following adds the Cupertino Icons font to your application.
