--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   http_parser: ^4.0.2
   mime: ^1.0.4
   
+  #firebase notif 
+  firebase_core: ^4.4.0
+  firebase_messaging: ^16.1.1
 
   # Riverpod
   riverpod: ^3.2.1
