--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,7 @@ dependencies:
   #firebase notif 
   firebase_core: ^4.4.0
   firebase_messaging: ^16.1.1
-  flutter_local_notifications: ^17.0.0
+  #flutter_local_notifications: ^17.0.0
 
   # Riverpod
   riverpod: ^3.2.1
